--- a/about.html
+++ b/about.html
@@ -100,12 +100,12 @@
 
                                 <section>
                                     <h3>Submissions are NOT open yet </h3>
-                                   <!--   <p> Submit your abstract before December 16, 2021. </p>
+                                    <p> Submit your abstract before xxx. </p>
                                     <footer>
                                         <a href="attend.html" class="button">Abstract Submission Guidelines</a>
                                     </footer>
                                     
-                                    <h3>Prepare for #EGPD2022 </h3>
+                                    <h3>Prepare for #EGPD2023 </h3>
                                     <p>Let us try to answer your questions as you get ready for the year's best opportunity to share your research on geothermal energy.</p>
                                     <li>
                                     <h3>
