--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     <!-- Sidebar -->
                                     
                                     <section>
-                                        <span class="image featured"><img src="images/logo.png" alt="" /></span>
+                                        <span class="image featured"><img src="images/egpd.png" alt="" /></span>
                                         
                                         <h3>Submissions are NOT open yet </h3>
                                         <p> Submit your abstract before xxx.  Attendance is free of charge!</p>
@@ -142,7 +142,7 @@
                 <section class="wrapper style2">
                     <div class="container">
                         <header class="major">
-                            <img src="images/logo.png" alt="EASYGO-logo" width="300">
+                            <img src="images/egpd.png" alt="egpd-logo" width="300">
                             <h4> xxx </h4>
                         </header>
                     </div>
@@ -158,18 +158,18 @@
 
 					<!-- Icons -->
 						<ul class="icons">
-							<li><a href="https://twitter.com/EASYGO_ITN?s=20" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://www.facebook.com/EuropeanGeothermalPhdDay" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://www.linkedin.com/groups/12568861/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<!--<li><a href="https://twitter.com/EASYGO_ITN?s=20" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<!--<li><a href="https://www.facebook.com/EuropeanGeothermalPhdDay" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<!--<li><a href="https://www.linkedin.com/groups/12568861/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://www.instagram.com/egpd_2023/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                            <li><a href="https://www.researchgate.net/project/EASYGO-ITN-Efficiency-and-Safety-in-Geothermal-Operations" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
+                            <!--<li><a href="https://www.researchgate.net/project/EASYGO-ITN-Efficiency-and-Safety-in-Geothermal-Operations" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
 						</ul>
 
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
 								<li>&copy; EGPD 2023. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                                <li>Home Image: <a href="http://unsplash.com">Unsplash</a></li>
+                                <li>Home Image: <a href="http://www.gla.ac.uk">Glasgow University</a></li>
 							</ul>
 						</div>
 
