--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -95,7 +95,7 @@
                         
                         <div class="col-4 col-12-narrower">
                             <div id="sidebar">
-                                <span class="image featured"><img src="images/Glasgow.jpg" alt="" /></span>
+                                <span class="image featured"><img src="images/Photo by Johnny Briggs on Unsplash.jpg" alt="" /></span>
                                 <h3>Venues </h3>
                                 <p> University of Glagow, Glasgow G12 8QQ. </p>
 				<p> University of Strathclyde, 16 Richmond St, Glasgow G1 1XQ. </p>
@@ -139,7 +139,7 @@
                         <div class="copyright">
                             <ul class="menu">
                                 <li>&copy; EGPD 2023. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                                <li>Glasgow Image: MR </li>
+                                <li>Glasgow Image: Photo by Johnny Briggs on Unsplash </li>
                             </ul>
                         </div>
 
