--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -95,7 +95,7 @@
                         
                         <div class="col-4 col-12-narrower">
                             <div id="sidebar">
-                                <span class="image featured"><img src="images/Photo by Johnny Briggs on Unsplash.jpg" alt="" /></span>
+                                <span class="image featured"><img src="images/Glasgow_Briggs.jpg" alt="" /></span>
                                 <h3>Venues </h3>
                                 <p> University of Glagow, Glasgow G12 8QQ. </p>
 				<p> University of Strathclyde, 16 Richmond St, Glasgow G1 1XQ. </p>
