--- a/schedule.html
+++ b/schedule.html
@@ -68,7 +68,7 @@
                                 <!-- Sidebar -->
 
                                 <section>
-                                    <h3>Highlights of the event! </h3>
+                                    <h3>Highlights of the event </h3>
                                     <p>Keynote speakers: </p>
                                     
                                 </section>
@@ -99,7 +99,7 @@
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-                                <li>&copy; EGPD 2022. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                                <li>&copy; EGPD 2023. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 
