--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -112,7 +112,7 @@
                 <div class="container">
                     <header class="major">
                         <img src="images/egpd.png" alt="egpd" width="300">
-                        <h4> xxx </h4>
+                        <h4>  </h4>
                     </header>
                 </div>
             </section>
@@ -126,7 +126,8 @@
                             <li><a href="https://www.facebook.com/EuropeanGeothermalPhdDay" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
                             <li><a href="https://www.linkedin.com/groups/12568861/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
                             <li><a href="https://www.researchgate.net/project/EASYGO-ITN-Efficiency-and-Safety-in-Geothermal-Operations" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
-                        </ul>
+ 			    <li><a href="https://www.instagram.com/egpd_2023/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                       </ul>
 
                     <!-- Copyright -->
                         <div class="copyright">
