--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 
                                     <article>
 
-                                        <span class="image featured"><img src="images/volcanoe-prepare.jpg" alt="" /></span>
+                                        <!--  <span class="image featured"><img src="images/volcanoe-prepare.jpg" alt="" /></span> -->
 
 
                                         <header>
