--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                                     <article>
 
                                         <!--  <span class="image featured"><img src="images/volcanoe-prepare.jpg" alt="" /></span> -->
-
+					<span class="image featured"><img src="images/Glasgow_Seremet.jpg" alt="" /></span>
 
                                         <header>
                                             <h2>EGPD's Initiative</h2>
@@ -264,13 +264,14 @@
                             <li><a href="https://www.facebook.com/EuropeanGeothermalPhdDay" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
                             <li><a href="https://www.linkedin.com/groups/12568861/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
                             <li><a href="https://www.researchgate.net/project/EASYGO-ITN-Efficiency-and-Safety-in-Geothermal-Operations" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
-                        </ul>
+                       	<li><a href="https://www.instagram.com/egpd_2023/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                       </ul>
 
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
                                 <li>&copy; EGPD 2023. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                                <li>Volcanoe Image: <a href="http://unsplash.com">Unsplash</a></li> 
+                                <li>Glasgow Image: <a href="http://unsplash.com">Photo by Dorin Seremet on Unsplash</a></li> 
 							</ul>
 						</div>
 
