--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -133,7 +133,7 @@
                         <div class="copyright">
                             <ul class="menu">
                                 <li>&copy; EGPD 2023. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                                <li>Glasgow Image: Photo by Johnny Briggs on Unsplash </li>
+                                <li>Glasgow Image: <a href="http://unsplash.com">Photo by Johnny Briggs on Unsplash </a></li>
                             </ul>
                         </div>
 
