--- a/attend.html
+++ b/attend.html
@@ -218,7 +218,7 @@
 						<div class="copyright">
 							<ul class="menu">
                                 <li>&copy; EGPD 2022. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                                <li>Glasgow Image: <a href="http://unsplash.com"> Adam Marikar on Unsplash</a></li>
+                                <li>Glasgow Image: <a href="http://unsplash.com">Photo by Adam Marikar on Unsplash</a></li>
 							</ul>
 						</div>
 
