--- a/sponsor.html
+++ b/sponsor.html
@@ -6,7 +6,7 @@
 -->
 <html>
     <head>
-        <title>EGPD 2022</title>
+        <title>EGPD 2023</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <link rel="stylesheet" href="assets/css/main.css" />
@@ -19,8 +19,8 @@
 				<div id="header">
                     
                     <!-- Logo -->
-                        <h1><a href="index.html" id="logo">European Geothermal PhD Days <em> 27-29
-                            April 2022</em></a></h1>
+                        <h1><a href="index.html" id="logo">European Geothermal PhD Days <em> 4 - 6
+                            April 2023</em></a></h1>
 					<!-- Nav -->
                     <!-- Nav -->
                         <nav id="nav">
@@ -53,12 +53,12 @@
                                             <h3>Sponsor opportunity</h3>
                                             <p>Would you like the logo of your company here?</p>
 											<footer>
-												<a href="mailto: egpd2022@erdw.ethz.ch?subject=Sponsor_Inquiry" class="button">Sponsor</a>
+												<a href="mailto: civ_stu_egpd@groups.strath.ac.uk?subject=Sponsor_Inquiry" class="button">Sponsor</a>
 											</footer>
 										</section>
 
 										<section>
-                                            <span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+                                            <span class="image featured"><img src="images/egpd.png" alt="" /></span>
 										</section>
 
 								</div>
@@ -110,7 +110,7 @@
                             <li><a href="https://twitter.com/EASYGO_ITN?s=20" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                             <li><a href="https://www.facebook.com/EuropeanGeothermalPhdDay" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
                             <li><a href="https://www.linkedin.com/groups/12568861/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-                            <li><a href="https://www.researchgate.net/project/EASYGO-ITN-Efficiency-and-Safety-in-Geothermal-Operations" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
+ 			    <li><a href="https://www.instagram.com/egpd_2023/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                         </ul>
 
 					<!-- Copyright -->
