--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -122,10 +122,7 @@
 
                     <!-- Icons -->
                         <ul class="icons">
-                            <li><a href="https://twitter.com/EASYGO_ITN?s=20" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                            <li><a href="https://www.facebook.com/EuropeanGeothermalPhdDay" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                            <li><a href="https://www.linkedin.com/groups/12568861/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-                            <li><a href="https://www.researchgate.net/project/EASYGO-ITN-Efficiency-and-Safety-in-Geothermal-Operations" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
+                            <li><a href="https://twitter.com/egpd_2023" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
  			    <li><a href="https://www.instagram.com/egpd_2023/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                        </ul>
 
