--- a/about.html
+++ b/about.html
@@ -187,7 +187,7 @@
                                     <a href="#" class="image left"><img src="images/comittee/Maelle.jpg" alt="" /></a>
                                     <div class="inner">
                                         <h3>Maëlle Brémaud</h3>
-                                        <p>xxx.</p>
+                                        <p>Developing an integrated resource risk assessment toolkit for hot sedimentary aquifer projects.</p>
                                         
                                         <p>Host Institutions: University of Strathclyde </p>
                                     </div>
