--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
                                         <div class="numbredContent minHeight">EGPD is completely free of charge! If you are a PhD student and can't afford the travel expenses, don't hesitate to contact us at <a href="mailto: civ_stu_egpd@groups.strath.ac.uk"> civ_stu_egpd@groups.strath.ac.uk </a> to learn about financial opportunities. <br></div>
                                     </li>
                                     <footer>
-                                        <a href="mailto: civ_stu_egpd@groups.strath.ac.uk?subject=question_regarding_funding" class="button">Funding oportunities</a>
+                                        <a href="mailto: egpd2023@gmail.com?subject=question_regarding_funding" class="button">Funding oportunities</a>
                                     </footer>
                                 </section>
 
