--- a/sponsor.html
+++ b/sponsor.html
@@ -53,7 +53,7 @@
                                             <h3>Sponsor opportunity</h3>
                                             <p>Would you like the logo of your company here?</p>
 											<footer>
-												<a href="mailto: civ_stu_egpd@groups.strath.ac.uk?subject=Sponsor_Inquiry" class="button">Sponsor</a>
+												<a href="mailto: egpd2023@gmail.com?subject=Sponsor_Inquiry" class="button">Sponsor</a>
 											</footer>
 										</section>
 
