--- a/about.html
+++ b/about.html
@@ -199,9 +199,9 @@
                                     <a href="#" class="image left"><img src="images/comittee/Sally.jpg" alt="" /></a>
                                     <div class="inner">
                                         <h3>Sally Jack </h3>
-                                        <p> xxx </p>
+                                        <p> Understanding the interactions between multiple mine-water heat users tapping into a single mine/mine-water block, based on data from UK mines and interviews with mine engineers. The findings will be used to develop a screening tool for developers/policy makers that assists in de-risking future mine water thermal schemes. </p>
 					    
-                                        <p>Host Institutions: University of Strathclyde </p>
+                                        <p>Host Institutions: Civil & Environmental Engineering Department, University of Strathclyde </p>
                                     </div>
                                 </div>
                             </section>
