--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -79,11 +79,11 @@
 						
 						
 					<header>
-					<h2>Recommended Hotel and Accommodations </h2>
+					<h2>Hotel and Accommodations </h2>
 
-                      			 We recommend you to book your accomodation via the se <a href="https://www.booking.com/city/gb/glasgow.html?no_rooms=1&room1=A&aid=1299196&group_adults=1/">Glasgow affiliated booking.com website </a>. 
-						 Examples of hotels listed below are located between the venues and close to the city center. 
-					 The Meeting Planner's Toolkit 
+                      			 We recommend you to book your accomodation via the <a href="https://www.booking.com/city/gb/glasgow.html?no_rooms=1&room1=A&aid=1299196&group_adults=1/">Glasgow affiliated booking.com website </a>. 
+						 Examples of hotels located between the venues and close to the city cente are listed below. 
+
 					</header>
 
 						<ul>
