--- a/oursponsors.html
+++ b/oursponsors.html
@@ -47,7 +47,7 @@
                 <div class="container">
                     <header class="major">
                         <h2>Sponsors</h2>
-                        <p>We are grateful for the support of our sponsors, who made this event possible.</p>
+                        <p>We are grateful for the support of our sponsors, who will make this event possible and free for all european PhD students.</p>
                     </header>
                 </div>
             
@@ -68,7 +68,7 @@
             <section class="wrapper style2">
                 <div class="container">
                     <header class="major">
-                        <h2>Thank you for supporting the EGPD 2023!</h2>
+                        <h2>Thanks or supporting the EGPD 2023 !</h2>
                     </header>
                 </div>
                 
