--- a/sponsor.html
+++ b/sponsor.html
@@ -84,9 +84,10 @@
                                             <p>The following is a list of sponsorship opportunities that help make this a successful and pleasant conference. Please consider donating towards one of these financial expenditures of the event. In return, we will include your business on our website as a valued sponsor with the respective tier/level and acknowledge your contribution during the event week.</p>
 
                                             <li> Coffee and Tea Breaks</li>
-                                            <li> Lunch and/or Dinner</li>
+                                            <li> Lunch and Conference Dinner</li>
                                             <li> Food and Beverages for Social/Networking events</li>
-                                            <li> Funding student travel</li>
+                                            <li> Travel to UKGEOS site visit </li>
+					    <li> Funding student travel</li>
                                             <li> Price money for best poster/presentation</li>
                                             
 										</article>
