--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
 
                                 <section>
                                     <h3>Submissions are NOT open yet </h3>
-                                    <p> Submit your abstract before xxx. </p>
+                                    <p> Submit your abstract before the 13th January 2023. </p>
                                     <footer>
                                         <a href="attend.html" class="button">Abstract Submission Guidelines</a>
                                     </footer>
@@ -126,7 +126,7 @@
                                         <span class="number">3. </span>
                                         What is the cost?
                                         </h3>
-                                        <div class="numbredContent minHeight">EGPD is completely free of charge! If you are a PhD student and can't afford the travel expenses, don't hesitate to contact us at <a href="mailto: civ_stu_egpd@groups.strath.ac.uk"> civ_stu_egpd@groups.strath.ac.uk </a> to learn about financial opportunities. <br></div>
+                                        <div class="numbredContent minHeight">EGPD is completely free of charge! If you are a PhD student and can't afford the travel expenses, don't hesitate to contact us at <a href="mailto: egpd2023@gmail.com"> civ_stu_egpd@groups.strath.ac.uk </a> to learn about financial opportunities. <br></div>
                                     </li>
                                     <footer>
                                         <a href="mailto: egpd2023@gmail.com?subject=question_regarding_funding" class="button">Funding oportunities</a>
