--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                         <span class="image featured"><img src="images/egpd.png" alt="" /></span>
                                         
                                         <h3>Submissions are NOT open yet </h3>
-                                        <p> Submit your abstract before xxx.  Attendance is free of charge!</p>
+                                        <p> Submit your abstract before the 13th January 2023.  Attendance is free of charge!</p>
                                         <footer>
                                             <a href="attend.html" class="button">Abstract Submission Guidelines</a>
                                         </footer>
