--- a/travelandaccomodation.html
+++ b/travelandaccomodation.html
@@ -114,7 +114,7 @@
                                 <span class="image featured"><img src="images/Glasgow_Briggs.jpg" alt="" /></span>
                                 <h3>Venues </h3>
                                 <p> University of Glagow, Glasgow G12 8QQ. </p>
-				<p> University of Strathclyde, 16 Richmond St, Glasgow G1 1XQ. </p>
+				<p> University of Strathclyde, Learning & Teaching Building, Glasgow G1 1XN. </p>
                                 <!-- Sidebar -->
                                 
                             </div>
