--- a/attend.html
+++ b/attend.html
@@ -200,7 +200,7 @@
 
                                 <section>
                                     <h3>Submissions are NOT open yet </h3>
-                                    <p> Submit your abstract before xxx. </p>
+                                    <p> Submit your abstract before the 13th January 2023. </p>
                                     <footer>
                                         <a href="mailto: egpd2023@gmail.com?subject=Abstract_submission" class="button">Abstract Submission</a>
                                     </footer>
