--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
                                         <span class="number">3. </span>
                                         What is the cost?
                                         </h3>
-                                        <div class="numbredContent minHeight">EGPD is completely free of charge! If you are a PhD student and can't afford the travel expenses, don't hesitate to contact us at <a href="mailto: egpd2023@gmail.com"> civ_stu_egpd@groups.strath.ac.uk </a> to learn about financial opportunities. <br></div>
+                                        <div class="numbredContent minHeight">EGPD is completely free of charge! If you are a PhD student and can't afford the travel expenses, don't hesitate to contact us at <a href="mailto: egpd2023@gmail.com"> egpd2023@gmail.com </a> to learn about financial opportunities. <br></div>
                                     </li>
                                     <footer>
                                         <a href="mailto: egpd2023@gmail.com?subject=question_regarding_funding" class="button">Funding oportunities</a>
