--- a/about.html
+++ b/about.html
@@ -224,7 +224,7 @@
                                     <a href="#" class="image left"><img src="images/comittee/Mylene.jpg" alt="" /></a>
                                     <div class="inner">
                                         <h3>Mylene Receveur </h3>
-                                        <p>Investigate the key controls on mine-water temperature to identify/develop a standardized modelling approach or tool for the assessment of the heat potential of flooded coal mines.</p>
+                                        <p>Investigating the key controls on mine-water temperature to identify/develop a standardized modelling approach or tool for the assessment of the heat potential of flooded coal mines.</p>
 					    
 					<p>Host Institutions: University of Edinburgh </p>
                                     </div>
