--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
                     <!-- Logo -->
                         <h1><a href="index.html" id="logo">European Geothermal PhD Days <em> 4th - 6th
-                            April 2023</em></a></h1>
+                            Apr. 2023</em></a></h1>
 			<h1> THIS WEBSITE IS UNDER CONSTRUCTION </h1>
 
                     <!-- Nav -->
