--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
 				<div id="header">
 
                     <!-- Logo -->
-                        <h1><a href="index.html" id="logo">European Geothermal PhD Days <em> 4th - 6th
-                            Apr. 2023</em></a></h1>
+                        <h1><a href="index.html" id="logo">European Geothermal PhD Days <em> 4 - 6
+                            April 2023</em></a></h1>
 			<h1> THIS WEBSITE IS UNDER CONSTRUCTION </h1>
 
                     <!-- Nav -->
