--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
                                     <a href="#" class="image left"><img src="images/comittee/Will.jpg" alt="" /></a>
                                     <div class="inner">
                                         <h3>William Nibbs</h3>
-                                        <p>  </p>
+                                        <p> Resource assessment and uncertainty quantification of shallow underground thermal energy storage systems in urban areas. </p>
                                         
                                         <p>Host Institutions: University of Glasgow</p>
                                     </div>
