--- a/about.html
+++ b/about.html
@@ -239,7 +239,7 @@
                                     <a href="#" class="image left"><img src="images/comittee/Dan.jpg" alt="" /></a>
                                     <div class="inner">
                                         <h3>Dan Whittington</h3>
-                                        <p>  </p>
+                                        <p>   Assessing feasibility of thermal energy storage in mine shafts. </p>
 					    
 					<p>Host Institutions: University of Strathclyde </p>
                                     </div>
