--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
                             
                             <section class="col-6 col-12-narrower">
                                 <div class="box post">
-                                    <a href="#" class="image left"><img src="images/comittee/Will.jpg" alt="" /></a>
+                                    <a href="#" class="image left"><img src="images/comittee/WillNibbs.jpg" alt="" /></a>
                                     <div class="inner">
                                         <h3>William Nibbs</h3>
                                         <p> Resource assessment and uncertainty quantification of shallow underground thermal energy storage systems in urban areas. </p>
@@ -236,7 +236,7 @@
                             
                             <section class="col-6 col-12-narrower">
                                 <div class="box post">
-                                    <a href="#" class="image left"><img src="images/comittee/Dan.jpg" alt="" /></a>
+                                    <a href="#" class="image left"><img src="images/comittee/DanWhittington.jpg" alt="" /></a>
                                     <div class="inner">
                                         <h3>Dan Whittington</h3>
                                         <p>   Assessing feasibility of thermal energy storage in mine shafts. </p>
