--- a/about.html
+++ b/about.html
@@ -179,7 +179,7 @@
                                     <a href="#" class="image left"><img src="images/comittee/Katherine.jpg" alt="" /></a>
                                     <div class="inner">
                                         <h3>Katherine Deeming</h3>
-                                        <p> </p>
+                                        <p>  Integration of spatial data on minewater heating and cooling and thermal storage potential in order to address all aspects of the energy quadrilemma (sustainability, affordability, security, public acceptance) in the Central Belt of Scotland.  </p>
                                         
                                         <p>Host Institutions: University of Strathclyde</p>
                                     </div>
