--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
                 <section class="wrapper style2">
                     <div class="container">
                         <header class="major">
-                            <h2>Organizing Committee</h2>
+                            <h2>Organising Committee</h2>
                             <p>   </p>
                         </header>
                     </div>
