--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     <!-- Sidebar -->
                                     
                                     <section>
-                                        <span class="image featured"><img src="images/egpd.png" alt="" /></span>
+                                        <span class="image featured"><img src="images/EGPDlogo.png" alt="" /></span>
                                         
                                         <h3>Submissions are NOT open yet </h3>
                                         <p> Submit your abstract before the 13th January 2023.  Attendance is free of charge!</p>
