--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">European Geothermal PhD Days </a></h1>
-						<h1>4 - 6 April 2023</h1>
+						<h1><a href="index.html" id="logo">European Geothermal <em> PhD Days 4 - 6 April 2023 </a></h1>
+					
 						<h1>THE WEBSITE IS UNDER CONSTRUCTION</h1>
 					<!-- Nav -->
 						<nav id="nav">
