--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">European Geothermal PhD Days <em> 4 - 6 April 2023 </a></h1>
+					<h1><a href="index.html" id="logo">European Geothermal PhD Days <em> 4 - 6 April 2023 </em> </a></h1>
 					
 						<h1>THE WEBSITE IS UNDER CONSTRUCTION</h1>
 					<!-- Nav -->
