--- a/about.html
+++ b/about.html
@@ -252,7 +252,7 @@
                             
                             <section class="col-6 col-12-narrower">
                                 <div class="box post">
-                                    <a href="#" class="image left"><img src="images/comittee/Finlay.jpg" alt="" /></a>
+                                    <a href="#" class="image left"><img src="images/comittee/Mega.jpg" alt="" /></a>
                                     <div class="inner">
                                         <h3>Finlay</h3>
                                         <p> </p>
